# mini_distributed_task_queue

./: Cargo.toml  README.md  tasks.json
src/: main.rs
src/producer/: mod.rs
src/task/: mod.rs
src/worker/: mod.rs
