[package]
name = "mini_distributed_task_queue"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full" , "fs"] }
http-body-util = "0.1"
async-trait = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
trpl = "0.2.0"
flume = "0.11.1"
rand = "0.9.1"
